<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearMateriaActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="132dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="42dp"
            android:text="@string/nombreTxtNombreMateria" />

        <EditText
            android:id="@+id/editText_nombreMateria"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="13dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="132dp"
            android:layout_height="29dp"
            android:layout_alignBaseline="@+id/editText_codigo"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/nombreTxtCodigoMateria" />

        <EditText
            android:id="@+id/editText_codigo"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/editText_nombreMateria"
            android:layout_marginTop="105dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="132dp"
            android:layout_height="29dp"
            android:layout_alignBaseline="@+id/editText_descripcion"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/nombreTxtDescripcion" />

        <EditText
            android:id="@+id/editText_descripcion"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/editText_nombreMateria"
            android:layout_marginTop="171dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_numeroHoras"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/editText_nombreMateria"
            android:layout_marginBottom="206dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="132dp"
            android:layout_height="29dp"
            android:layout_alignBaseline="@+id/editText_numeroHoras"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/nombreTxtnumeroHoras" />

        <Spinner
            android:id="@+id/spinner_estudiantes"
            android:layout_width="257dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="148dp" />

        <Button
            android:id="@+id/btn_crearPelicula"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="37dp"
            android:text="@string/botonRegistrarMateria" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>